--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Assignment">
         <activity
+            android:name=".tutorial.TutorialCommentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".tutorial.AddTutorialActivity"
+            android:exported="false" />
+        <activity
+            android:name=".tutorial.TutorialDetailActivity"
+            android:exported="false"
+            android:label="@string/title_activity_tutorial_detail"
+            android:theme="@style/Theme.Assignment.NoActionBar" />
+        <activity
             android:name=".QuestionsList"
             android:exported="false" />
         <activity
