--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,16 @@ buildscript {
     repositories {
         // Check that you have the following line (if not, add it):
         google()  // Google's Maven repository
+        mavenCentral()
 
     }
     dependencies {
 
         // Add this line
+        classpath 'com.android.tools.build:gradle:7.1.3'
+
         classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
 
     }
 }
