--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
             android:name=".ForgotPassword"
             android:exported="false" />
         <activity
+            android:name=".AnswerQuestions"
+            android:exported="false" />
+        <activity
             android:name=".tutorial.TutorialCommentActivity"
             android:exported="false" />
         <activity
@@ -40,6 +43,15 @@
             android:exported="false" />
         <activity
             android:name=".AskQuestions"
+            android:exported="false" />
+        <activity
+            android:name=".Review"
+            android:exported="false" />
+        <activity
+            android:name=".AskQuestion"
+            android:exported="false" />
+        <activity
+            android:name=".MainQnA"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
